feature：jsalert implements

--- a/superagentweb-core/src/main/res/values-zh/strings.xml
+++ b/superagentweb-core/src/main/res/values-zh/strings.xml
@@ -18,4 +18,5 @@
     <string name="agentweb_leave">离开</string>
     <string name="agentweb_max_file_length_limit">选择的文件不能大于%sMB</string>
     <string name="agentweb_default_page_error">出错啦! 点击空白处刷新 ~</string>
+    <string name="agentweb_permission_deny_tips">权限被拒绝</string>
 </resources>
