--- a/superagentweb-core/src/main/res/values-zh/strings.xml
+++ b/superagentweb-core/src/main/res/values-zh/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="agentweb_download_task_has_been_exist">该任务已经存在，请勿重复点击下载!</string>
     <string name="agentweb_tips">提示</string>
-    <string name="agentweb_honeycomblow">您正在使用手机流量，继续下载该文件吗?</string>
+    <string name="agentweb_performdownload">您确认下载该文件吗?</string>
     <string name="agentweb_download">下载</string>
     <string name="agentweb_cancel">取消</string>
     <string name="agentweb_download_fail">下载失败!</string>
