styles：rename resources name

--- a/superagentweb/src/main/res/values-zh/strings.xml
+++ b/superagentweb/src/main/res/values-zh/strings.xml
@@ -1,23 +1,23 @@
 <resources>
-    <string name="agentweb_download_task_has_been_exist">该任务已经存在，请勿重复点击下载!</string>
-    <string name="agentweb_tips">提示</string>
-    <string name="agentweb_performdownload">您确认下载该文件吗?</string>
-    <string name="agentweb_download">下载</string>
-    <string name="agentweb_cancel">取消</string>
-    <string name="agentweb_download_fail">下载失败!</string>
-    <string name="agentweb_current_downloading_progress">当前进度:%s</string>
-    <string name="agentweb_current_downloaded_length">已下载:%s</string>
-    <string name="agentweb_trickter">您有一条新通知</string>
-    <string name="agentweb_file_download">文件下载</string>
-    <string name="agentweb_click_open">点击打开</string>
-    <string name="agentweb_coming_soon_download">即将开始下载文件</string>
-    <string name="agentweb_camera">相机</string>
-    <string name="agentweb_album">图库</string>
-    <string name="agentweb_file_chooser">文件</string>
-    <string name="agentweb_loading">加载中 …</string>
-    <string name="agentweb_leave_app_and_go_other_page">您需要离开%s前往其他应用吗？</string>
-    <string name="agentweb_leave">离开</string>
-    <string name="agentweb_max_file_length_limit">选择的文件不能大于%sMB</string>
-    <string name="agentweb_default_page_error">出错啦! 点击空白处刷新 ~</string>
-    <string name="agentweb_permission_deny_tips">权限被拒绝</string>
+    <string name="superagentweb_download_task_has_been_exist">该任务已经存在，请勿重复点击下载!</string>
+    <string name="superagentweb_tips">提示</string>
+    <string name="superagentweb_performdownload">您确认下载该文件吗?</string>
+    <string name="superagentweb_download">下载</string>
+    <string name="superagentweb_cancel">取消</string>
+    <string name="superagentweb_download_fail">下载失败!</string>
+    <string name="superagentweb_current_downloading_progress">当前进度:%s</string>
+    <string name="superagentweb_current_downloaded_length">已下载:%s</string>
+    <string name="superagentweb_trickter">您有一条新通知</string>
+    <string name="superagentweb_file_download">文件下载</string>
+    <string name="superagentweb_click_open">点击打开</string>
+    <string name="superagentweb_coming_soon_download">即将开始下载文件</string>
+    <string name="superagentweb_camera">相机</string>
+    <string name="superagentweb_album">图库</string>
+    <string name="superagentweb_file_chooser">文件</string>
+    <string name="superagentweb_loading">加载中 …</string>
+    <string name="superagentweb_leave_app_and_go_other_page">您需要离开%s前往其他应用吗？</string>
+    <string name="superagentweb_leave">离开</string>
+    <string name="superagentweb_max_file_length_limit">选择的文件不能大于%sMB</string>
+    <string name="superagentweb_default_page_error">出错啦! 点击空白处刷新 ~</string>
+    <string name="superagentweb_permission_deny_tips">权限被拒绝</string>
 </resources>
